<resources>
    <string name="app_name">Ubbe</string>
    <string name="product_image_desc">Product Image</string>
    <string name="version">Version</string>
    <string name="price">Price</string>
    <string name="product_name">Product Name</string>
    <string name="cardview_list">Card View</string>
    <string name="product_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="product_specs">Specification</string>
    <string name="purchase_button">Purchase Button</string>
    <string name="read_more">Read More</string>
</resources>
