<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        tools:src="@color/colorAccent"
        android:contentDescription="@string/product_image_desc" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="282dp">

        <TextView
            android:id="@+id/product_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ps_bold"
            android:textSize="28sp"
            tools:text="@string/product_name" />

        <TextView
            android:id="@+id/product_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="38dp"
            android:layout_toEndOf="@+id/product_title"
            android:fontFamily="@font/ps_regular"
            tools:text="@string/version" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_title"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/product_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rating_bar"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/ps_regular"
            android:textSize="12sp"
            android:textColor="@color/lightGray"
            tools:text="@string/product_desc"/>

        <TextView
            android:id="@+id/specs_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_desc"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            tools:text="@string/product_specs" />

        <TextView
            android:id="@+id/specs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/specs_title"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/ps_regular"
            android:textSize="12sp"
            android:textColor="@color/lightGray"
            tools:text="@string/product_desc" />

        <ImageView
            android:id="@+id/read_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/specs"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="200dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="201dp"
            app:srcCompat="@drawable/read_more"
            android:contentDescription="@string/read_more" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp">

            <ImageView
                android:id="@+id/purchase_button"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="-4dp"
                android:contentDescription="@string/purchase_button"
                app:srcCompat="@drawable/pay_button" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ps_regular"
                android:textSize="20sp"
                android:textColor="@color/lightGray"
                tools:text="@string/price"/>

        </FrameLayout>

    </RelativeLayout>

</LinearLayout>